crates/batchalign-app/tests/snapshots/json_compat__job_submission_paths_mode.snap
---
source: crates/batchalign-app/tests/json_compat.rs
expression: sub
---
{
  "command": "morphotag",
  "lang": "eng",
  "num_speakers": 1,
  "files": [],
  "media_files": [],
  "media_mapping": "",
  "media_subdir": "",
  "source_dir": "/input",
  "options": {
    "command": "morphotag",
    "override_cache": false,
    "lazy_audio": true,
    "retokenize": false,
    "skipmultilang": false,
    "merge_abbrev": false
  },
  "paths_mode": true,
  "source_paths": [
    "/input/a.cha",
    "/input/b.cha"
  ],
  "output_paths": [
    "/output/a.cha",
    "/output/b.cha"
  ],
  "display_names": [
    "a.cha",
    "b.cha"
  ],
  "debug_traces": false,
  "before_paths": []
}
