crates/batchalign-app/tests/snapshots/json_compat__server_config_default.snap
---
source: crates/batchalign-app/tests/json_compat.rs
assertion_line: 291
expression: cfg
---
{
  "media_roots": [],
  "media_mappings": {},
  "default_lang": "eng",
  "max_concurrent_jobs": 0,
  "port": 8000,
  "host": "0.0.0.0",
  "backend": "embedded",
  "max_workers_per_job": 0,
  "job_ttl_days": 7,
  "redis_url": "",
  "warmup_commands": [
    "morphotag",
    "align",
    "transcribe"
  ],
  "auto_daemon": true,
  "temporal_server_url": "http://127.0.0.1:7233",
  "temporal_namespace": "default",
  "temporal_task_queue": "batchalign3-server",
  "temporal_heartbeat_s": 10,
  "temporal_activity_timeout_s": 86400,
  "memory_gate_mb": 8000,
  "worker_idle_timeout_s": 600,
  "worker_health_interval_s": 30,
  "max_concurrent_worker_startups": 1,
  "max_workers_per_key": 0,
  "max_total_workers": 0,
  "worker_ready_timeout_s": 300,
  "max_body_bytes_mb": 100,
  "memory_gate_timeout_s": 120,
  "memory_gate_poll_s": 5,
  "memory_warning_mb": 4096,
  "gpu_thread_pool_size": 4,
  "local_lease_ttl_s": 300,
  "audio_task_timeout_s": 0,
  "analysis_task_timeout_s": 0,
  "worker_registry_path": "",
  "memory_tier": null,
  "gpu_startup_mb": 0,
  "stanza_startup_mb": 0,
  "io_startup_mb": 0
}
